[gd_scene load_steps=12 format=2]

[ext_resource path="res://sprites/cards/cardBackground.png" type="Texture" id=1]
[ext_resource path="res://sprites/cards/concept2.png" type="Texture" id=2]
[ext_resource path="res://scripts/card.gd" type="Script" id=3]
[ext_resource path="res://fonts/bold/boldFontGhost.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://fonts/regular/TeenyTinyPixls-o2zo.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://sprites/cards/cardBackground-dark.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 35.5 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "2",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "1",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 5
font_data = ExtResource( 5 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 120.0
initial_velocity_random = 0.19
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="card" type="Node2D"]
z_index = 5
script = ExtResource( 3 )

[node name="hitbox" type="Area2D" parent="."]
z_index = 100

[node name="collisionShape" type="CollisionShape2D" parent="hitbox"]
position = Vector2( 24, 35.5 )
shape = SubResource( 1 )

[node name="artFront" type="Node2D" parent="."]
position = Vector2( 3, 3 )
z_index = 1

[node name="sprite" type="Sprite" parent="artFront"]
texture = ExtResource( 2 )
centered = false

[node name="artBack" type="Node2D" parent="."]

[node name="sprite" type="AnimatedSprite" parent="artBack"]
frames = SubResource( 2 )
animation = "1"
centered = false

[node name="text" type="Node2D" parent="."]
modulate = Color( 0.243137, 0.243137, 0.243137, 1 )
z_index = 2

[node name="title" type="Label" parent="text"]
margin_top = 42.0
margin_right = 48.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 3 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stability" type="Label" parent="text"]
margin_top = 55.0
margin_right = 48.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 4 )
text = "uuuu"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="poof" type="Particles2D" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 24, 26 )
z_index = 100
emitting = false
amount = 32
lifetime = 5.0
explosiveness = 1.0
process_material = SubResource( 5 )

[node name="sound" type="AudioStreamPlayer" parent="."]
bus = "sound"

[node name="soundSpecific" type="AudioStreamPlayer" parent="."]
bus = "sound"

[connection signal="mouse_entered" from="hitbox" to="." method="_on_hitbox_mouse_entered"]
[connection signal="mouse_exited" from="hitbox" to="." method="_on_hitbox_mouse_exited"]
